my-app/src/app/globals.css
@import "bootstrap/dist/css/bootstrap.css";
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #000000;
    --foreground: #ffffff;
  }
}

html, body {
  background: var(--background) !important;
  color: var(--foreground) !important;
  font-family: 'Montserrat', sans-serif !important;
  height: auto !important;
  overflow: auto !important;
  filter: invert(1) hue-rotate(180deg);
}

